# ai-hub-apps

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  ruff.toml
.github/: actionlint.yaml
.github/templates/: nightly-failure-issue.md
.github/workflows/: android.yaml  build-and-test.yaml  cli-tests.yaml  main.yaml  nightly.yaml  public-gh-notify.yaml  release.yaml  release_code.yaml  release_pypi.yaml  release_website.yaml  windows.yaml
apps/: asset_bases.yaml
apps/_shared/scripts/: pip_utils.ps1  pip_utils.sh  python_utils.sh  qairt_utils.ps1  qairt_utils.sh  versions.env
apps/android/ChatApp/: info.yaml
apps/android/ChatApp/src/main/cpp/: GenieWrapper.hpp
apps/android/ImageClassification/: README.md  info.yaml
apps/android/ObjectDetection/: README.md  info.yaml
apps/android/SemanticSegmentation/: info.yaml
apps/android/SuperResolution/: README.md  info.yaml
apps/android/WhisperKit/: info.yaml
apps/chatapp_android/: README.md  build.gradle  info.yaml
apps/chatapp_android/src/main/cpp/: GenieWrapper.cpp
apps/chatapp_windows_cpp/: info.yaml
apps/image_classification_android/: build.gradle  info.yaml
apps/image_classification_windows_cpp/: info.yaml
apps/mediapipe_hand_gesture_ubuntu/: info.yaml  main.py
apps/mediapipe_hand_gesture_ubuntu/utils/: input_processing.py
apps/mediapipe_hand_gesture_ubuntu_py/: Dockerfile  README.md  info.yaml  install_runtime.sh  main.py  requirements.txt  run_docker.sh  test.sh
apps/mediapipe_hand_gesture_ubuntu_py/utils/: input_processing.py
apps/object_detection_android/: build.gradle  info.yaml
apps/object_detection_windows_cpp/: info.yaml
apps/semantic_segmentation_android/: README.md  build.gradle  info.yaml
apps/stable_diffusion_windows_py/: README.md  demo.py  info.yaml  install_python_deps.ps1  install_runtime.ps1
apps/super_resolution_android/: build.gradle  info.yaml
apps/super_resolution_windows_cpp/: info.yaml
apps/ubuntu/python/hand_gesture/: info.yaml
apps/whisper_kit_android/: info.yaml
apps/whisper_windows_py/: README.md  demo.py  evaluate.py  info.yaml
apps/windows/cpp/ChatApp/: README.md  info.yaml
apps/windows/cpp/Classification/: info.yaml
apps/windows/cpp/ObjectDetection/: info.yaml
apps/windows/cpp/SuperResolution/: info.yaml
apps/windows/python/: activate_venv.ps1
apps/windows/python/StableDiffusion/: README.md  demo.py  info.yaml
apps/windows/python/Whisper/: info.yaml
cli/: README.md  conftest.py  pyproject.toml  ruff.toml
cli/qai_hub_apps/: __init__.py  conftest.py  errors.py  errors_test.py  main.py  main_test.py  registry.yaml
cli/qai_hub_apps/commands/: fetch.py  fetch_test.py  list_apps.py  list_apps_test.py
cli/qai_hub_apps/configs/: app_yaml.py  app_yaml_test.py  base_config.py  model_asset.py  registry_yaml.py  registry_yaml_test.py  versions_yaml.py  versions_yaml_test.py
cli/qai_hub_apps/registry/: __init__.py  base.py  base_test.py  python_app.py  remote.py  remote_test.py
cli/qai_hub_apps/test/integration/: cli_test.py  conftest.py
cli/qai_hub_apps/test/integration/snapshots/: fetch.txt  fetch_dev.txt  fetch_tree.txt  info_whisper_windows_py.txt  list.txt
cli/qai_hub_apps/utils/: github.py  github_test.py
cli/qai_hub_apps/validate/: __init__.py  platform_check.py  platform_check_test.py
python/qai_hub_apps/: requirements-dev.txt  requirements.txt
python/qai_hub_apps/configs/: info_yaml.py  versions_yaml.py
python/qai_hub_apps/scripts/: build_and_verify_app.py
python/qai_hub_apps/test/: test_apps.py
python/qai_hub_apps/test/test_configs/: test_info_yaml.py
python/qai_hub_apps/utils/: aws.py  paths.py
python/qai_hub_apps/utils/android/: android_gradle_helpers.py
python/qai_hub_apps/utils/models/: install_model.py  verify_model.py
python/qai_hub_apps/utils/windows/: windows_vs_helpers.py
scripts/: build_and_test.py
scripts/ci/: .vsconfig  git-credential-helper.sh
scripts/ci/docker/: android_builder.dockerfile  windows_builder.dockerfile
scripts/ci/windows/: prep_run_tests.ps1
scripts/tasks/: constants.py  github.py  task.py  util.py  venv.py
scripts/util/: common.sh  env_create.ps1  env_create.sh  env_sync.sh  github.sh  run_mypy.sh
tools/: install_saml2aws.sh  run_mypy.sh  setup_env.ps1  setup_env.sh
tools/ci/: common.sh  download-qdc-wheel.sh
tools/ci/aws/: install_awslogin.sh
tools/ci/docker/: windows_builder.dockerfile
tools/ci/windows/: prep_run_tests.ps1
tools/python/: README.md  pyproject.toml  ruff.toml
tools/python/qai_hub_apps_test/: conftest.py  requirements-dev.txt  requirements-precommit.txt  requirements.txt
tools/python/qai_hub_apps_test/bundlers/: README.md  __init__.py  bundlers_test.py
tools/python/qai_hub_apps_test/bundlers/python/: __init__.py  bundle.py  bundle_test.py  requirements.py  requirements_test.py  sdk_collector.py  sdk_collector_test.py  sdk_resolver.py  sdk_resolver_test.py
tools/python/qai_hub_apps_test/bundlers/shell/: __init__.py  bundle.py  bundle_test.py  script_resolver.py
tools/python/qai_hub_apps_test/configs/: asset_bases_yaml.py  info_yaml.py  registry_yaml.py  versions_yaml.py
tools/python/qai_hub_apps_test/qdc/: app_test_job.py  qdc_jobs.py
tools/python/qai_hub_apps_test/qdc/device_scripts/: run_linux.sh  ubuntu.dockerfile
tools/python/qai_hub_apps_test/scripts/: build_and_verify_app.py  generate_registry.py  generate_registry_test.py
tools/python/qai_hub_apps_test/test/: helpers.py  test_apps.py
tools/python/qai_hub_apps_test/test/test_configs/: test_info_yaml.py
tools/python/qai_hub_apps_test/utils/: ci.py  paths.py  process.py  verify_result.py
tools/python/qai_hub_apps_test/utils/android/: android_gradle_helpers.py
tools/python/qai_hub_apps_test/utils/aws/: __init__.py  validate_credentials.py
tools/python/qai_hub_apps_test/utils/models/: install_model.py  verify_model.py
tools/python/qai_hub_apps_test/utils/windows/: windows_vs_helpers.py
tutorials/llm_on_genie/: README.md  export.md  manual_bundle.md
tutorials/llm_on_genie/powershell/: RunLlm.ps1
(+6 files in other folders)
