[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "qai-hub-apps"
authors = [
    {name = "Qualcomm® Technologies, Inc", email = "ai_hub_support@qti.qualcomm.com"},
]
description = "CLI for managing and deploying Qualcomm® AI Hub Apps."
readme = "README.md"
requires-python = ">=3.10"
license = "BSD-3-Clause"
classifiers = [
    "Programming Language :: Python :: 3",
]
dynamic = ["version"]

[project.scripts]
qai-hub-apps = "qai_hub_apps.main:main"

[tool.setuptools.packages.find]
include = ["qai_hub_apps*"]

[tool.setuptools.dynamic]
version = {attr = "qai_hub_apps.__version__"}
