[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "qai_hub_apps_test"
authors = [
    {name = "Qualcomm® Technologies, Inc", email = "ai_hub_support@qti.qualcomm.com"},
]
description = "Helpers for building, testing, and inspecting metadata for AI Hub Apps."
readme = "README.md"
requires-python = ">=3.10"
license = "BSD-3-Clause"
classifiers = [
    "Programming Language :: Python :: 3",
]
dynamic = ["version", "dependencies", "optional-dependencies"]

[tool.setuptools.dynamic]
version = {attr = "qai_hub_apps_test.__version__"}
dependencies = {file = "qai_hub_apps_test/requirements.txt"}

[tool.setuptools.dynamic.optional-dependencies]
precommit = {file = "qai_hub_apps_test/requirements-precommit.txt"}
dev       = {file = "qai_hub_apps_test/requirements-dev.txt"}

[tool.pydoclint]
style = 'numpy'
arg-type-hints-in-docstring = false
skip-checking-short-docstrings = true
skip-checking-raises = true
allow-init-docstring = true
check-style-mismatch = true

[tool.mypy]
ignore_missing_imports = true
warn_unused_ignores = true

[tool.pytest.ini_options]
python_files = ["*_test.py"]
testpaths = ["qai_hub_apps_test"]

[[tool.mypy.overrides]]
module = "qai_hub_apps_test.*"
disable_error_code = ["type-abstract", "override", "method-assign"]
check_untyped_defs = true
